--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -1,4 +1,3 @@
-# .github/workflows/development.yml
 name: Development Workflow
 
 on:
@@ -7,10 +6,19 @@ on:
     branches: [master, main]
 
 jobs:
-  quality:
-    runs-on: ubuntu-latest
+  build:
+    runs-on: ubuntu-22.04
+    strategy:
+      matrix:
+        node-version: [20.11.1]
     steps:
       - uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9.10.0 # match your packageManager pin
+          run_install: false
 
       - name: Setup Node (from .nvmrc)
         uses: actions/setup-node@v4
@@ -18,20 +26,16 @@ jobs:
           node-version-file: '.nvmrc'
           cache: 'pnpm'
 
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: 9.10.0
-          run_install: false
-
-      - name: Versions
+      - name: Show versions
         run: |
           node -v
           pnpm -v
 
-      - name: Install deps
+      # 3) Install deps using the lockfile
+      - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
+      # 4) Quality gates
       - name: ESLint
         run: pnpm lint
 
