--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -6,18 +6,15 @@ on:
     branches: [master, main]
 
 jobs:
-  build:
-    runs-on: ubuntu-22.04
-    strategy:
-      matrix:
-        node-version: [20.11.1]
+  lint:
+    runs-on: latest
     steps:
       - uses: actions/checkout@v4
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 9.10.0 # match your packageManager pin
+          version: 9.10.0
           run_install: false
 
       - name: Setup Node (from .nvmrc)
