--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "type": "module",
   "packageManager": "pnpm@9.10.0",
   "engines": {
-    "node": "20.11.x"
+    "node": "22.12.x"
   },
   "volta": {
-    "node": "20.11.1",
+    "node": "22.12.0",
     "pnpm": "9.10.0"
   },
   "scripts": {
@@ -19,7 +19,7 @@
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "check": "pnpm lint && pnpm format:check",
-    "prepare": "husky install"
+    "prepare": "is-ci || husky"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -100,6 +100,8 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-unused-imports": "^4.2.0",
     "globals": "^15.15.0",
+    "husky": "^9.1.7",
+    "is-ci": "^4.1.0",
     "lint-staged": "^16.1.6",
     "lovable-tagger": "^1.1.9",
     "postcss": "^8.5.6",
