--- a/.cz.toml
+++ b/.cz.toml
@@ -1,6 +1,6 @@
-{
-  "path": "cz-conventional-changelog",
-  "tag_format": "v$version",
-  "version": "0.1.0",
-  "changelog_file": "CHANGELOG.md"
-}
+[tool.commitizen]
+name = "cz-conventional-changelog"
+version = "0.1.0"
+tag_format = "v$version"
+update_changelog = true
+changelog_file = "CHANGELOG.md"
