--- a/.cz.toml
+++ b/.cz.toml
@@ -1,5 +1,5 @@
 [tool.commitizen]
-name = "cz-conventional-changelog"
+name = "cz_conventional_commits"
 version = "0.1.0"
 tag_format = "v$version"
 update_changelog = true
