--- a/.github/workflows/storybook-play-tests.yml
+++ b/.github/workflows/storybook-play-tests.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: .nvmrc
+          node-version: 22
           cache: pnpm
 
       - name: Install deps
