--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
     "eslint-plugin-storybook": "9.1.5",
     "eslint-plugin-unused-imports": "^4.2.0",
     "globals": "^15.15.0",
+    "http-server": "^14.1.1",
     "husky": "^9.1.7",
     "is-ci": "^4.1.0",
     "lint-staged": "^16.1.6",
@@ -140,7 +141,8 @@
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
     "vite": "^5.4.19",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "wait-on": "^8.0.5"
   },
   "msw": {
     "workerDirectory": [
